# HiddiMessenger

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_hiddi_launcher_background.xml  ic_hiddi_launcher_foreground.xml  ic_hiddi_notification.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_hiddi_launcher_round.xml
android/app/src/main/res/values/: themes.xml
android/gradle/: libs.versions.toml
client-cli/: Cargo.toml  README.md
client-cli/src/: main.rs
deploy/production/: Caddyfile  README.md  compose.yaml
desktop-client/: README.md  build.gradle.kts  settings.gradle.kts
desktop-client/src/main/kotlin/ru/hiddi/desktop/: DesktopSignalStore.kt  HiddiApi.kt  Main.kt  Models.kt  SignalDevice.kt  Vault.kt
desktop-client/src/test/kotlin/ru/hiddi/desktop/: VaultTest.kt
docs/: api.md  architecture.md  groups-mls.md  roadmap.md
group-mls-core/: Cargo.toml
group-mls-core/src/: lib.rs  storage.rs
scripts/: build-android-mls.sh  install-android-mls.sh
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: attachment_storage.rs  main.rs
terminal-client/: README.md  build.gradle.kts  settings.gradle.kts
terminal-client/src/main/kotlin/ru/hiddi/terminal/: AttachmentSupport.kt  ChatCommand.kt  EncryptedVault.kt  GroupCommand.kt  Main.kt  RegisterCommand.kt  TerminalSignalStore.kt
(+40 files in other folders)
