[package]
name = "hiddi-group-mls-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
aes-siv = "0.7.0"
openmls = { version = "0.8.1", features = ["openmls_rust_crypto"] }
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_sqlite_storage = "0.2.0"
openmls_traits = "0.5.0"
jni = "0.22.4"
rusqlite = "0.32.1"
serde = "1.0.229"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
